Kubernets/echo-server-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server-pod
  namespace: training
  labels:
    version: "v1"
    training: "true"
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
          name: http
      resources:
        requests:
          memory: 64M
        limits:
          memory: 128M
