Kubernets/updater-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: updater-pod
  labels:
    app-name: updater
spec:
  containers:
    - name: updater
      image: landrzejewski/updater:v2
      volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /storage
          name: storage
#      args:
#        - "10"

#      env:
#        - name: INTERVAL
#          value: "10"

#      env:
#        - name: INTERVAL
#          valueFrom:
#            configMapKeyRef:
#              key: INTERVAL
#              name: updater-config-map

  volumes:
    - name: config
      configMap:
        name: updater-config-map
    - name: storage
      #hostPath:
      #  path: /tmp/storage
      persistentVolumeClaim:
        claimName: storage-persistence-volume-claim
